# paws

./: CLIENT_SERVER_REFACTOR.md  Cargo.lock.rej  Cargo.toml  README.md  REFACTOR_SUMMARY.md  diesel.toml  install.sh  large_table.md  paws.default.yaml  paws.schema.json  todo
crates/paws_api/: Cargo.toml
crates/paws_api/src/: api.rs  lib.rs  paws_api.rs
crates/paws_app/: Cargo.toml
crates/paws_app/src/: agent.rs  agent_executor.rs  agent_provider_resolver.rs  app.rs  apply_tunable_parameters.rs  authenticator.rs  changed_files.rs  command_generator.rs  compact.rs  data_gen.rs  error.rs  file_tracking.rs  git_app.rs  infra.rs  init_conversation_metrics.rs  lib.rs  mcp_executor.rs  operation.rs  operation_tests.rs  orch.rs  retry.rs  search_dedup.rs  services.rs  set_conversation_id.rs  system_prompt.rs  template_engine.rs  title_generator.rs  tool_executor.rs  tool_executor.rs.rej  tool_registry.rs  tool_resolver.rs  user_prompt.rs
crates/paws_app/src/dto/: common.rs  tools_overview.rs
crates/paws_app/src/fmt/: content.rs  fmt_input.rs  fmt_output.rs
crates/paws_app/src/orch_spec/: orch_runner.rs  orch_setup.rs  orch_setup.rs.rej  orch_spec.rs  orch_system_spec.rs
crates/paws_app/src/snapshots/: paws_app__changed_files__tests__multiple_files_changed.snap  paws_app__command_generator__tests__generate_simple_command.snap  paws_app__command_generator__tests__generate_with_no_files.snap  paws_app__compact__tests__render_summary_frame_snapshot-2.snap  paws_app__compact__tests__render_summary_frame_snapshot.snap  paws_app__compact__tests__template_engine_renders_summary_frame.snap  paws_app__operation_tests__fs_create_with_warning.snap  paws_app__operation_tests__fs_patch_with_warning.snap  paws_app__operation_tests__net_fetch_truncated.snap  paws_app__operation_tests__skill_operation.snap
crates/paws_app/src/transformers/: compaction.rs  dedupe_role.rs  drop_role.rs  strip_working_dir.rs  trim_context_summary.rs
crates/paws_client/: Cargo.toml
crates/paws_client/src/: cli.rs  client_server.rs  lib.rs  main.rs
crates/paws_common/: Cargo.toml
crates/paws_common/src/: lib.rs
crates/paws_common/src/display/: mod.rs
crates/paws_common/src/fs/: file_info.rs  file_size.rs  is_binary.rs  meta.rs  mod.rs  read.rs  read_range.rs  write.rs
crates/paws_common/src/json_repair/: parser.rs
crates/paws_common/src/select/: core.rs  mod.rs
crates/paws_common/src/spinner/: mod.rs
crates/paws_common/src/test_kit/: mod.rs
crates/paws_common/src/walker/: mod.rs
crates/paws_common/tests/: json_repair_comments_unicode.rs  json_repair_complex_repairs.rs  json_repair_error_cases.rs  json_repair_escaping.rs  json_repair_numbers.rs  json_repair_punctuation.rs  json_repair_quotes.rs  json_repair_special_quotes.rs  json_repair_special_values.rs  json_repair_strings.rs  json_repair_truncation.rs  json_repair_valid_json.rs
crates/paws_display/: Cargo.toml
crates/paws_display/src/md/: ansi.rs  mod.rs  writer.rs
crates/paws_domain/: Cargo.toml
crates/paws_domain/src/: agent_definition.rs  chat_response.rs  context.rs  conversation.rs  conversation.rs.rej  conversation_html.rs  env.rs  env.rs.rej  error.rs  event.rs  file.rs  http_config.rs  lib.rs  provider.rs  provider.rs.rej  repo.rs  result_stream_ext.rs  retry_config.rs  system_context.rs  workflow.rs  xml.rs
crates/paws_domain/src/compact/: compact_config.rs  summary.rs
crates/paws_domain/src/fixtures/: tool_call_01.md
crates/paws_domain/src/policies/: config.rs
crates/paws_domain/src/snapshots/: paws_domain__context__tests__update_image_tool_calls_empty_context.snap  paws_domain__context__tests__update_image_tool_calls_mixed_content_with_images.snap  paws_domain__context__tests__update_image_tool_calls_multiple_images_single_tool_result.snap  paws_domain__context__tests__update_image_tool_calls_multiple_tool_results_with_images.snap  paws_domain__context__tests__update_image_tool_calls_no_tool_results.snap  paws_domain__context__tests__update_image_tool_calls_preserves_error_flag.snap  paws_domain__context__tests__update_image_tool_calls_single_image.snap  paws_domain__context__tests__update_image_tool_calls_tool_results_no_images.snap  paws_domain__conversation_html__tests__conversation.snap
crates/paws_domain/src/tools/: catalog.rs  result.rs
crates/paws_domain/tests/: workflow.rs
crates/paws_infra/: Cargo.toml
crates/paws_infra/src/: env.rs  env.rs.rej  executor.rs  fs_create_dirs.rs  fs_meta.rs  fs_read.rs  fs_read_dir.rs  fs_remove.rs  fs_write.rs  grpc.rs  http.rs  inquire.rs  kv_storage.rs  lib.rs  mcp_client.rs  mcp_server.rs  paws_infra.rs  walker.rs
crates/paws_infra/src/auth/: strategy.rs  util.rs
crates/paws_main/: Cargo.toml  build.rs
crates/paws_main/src/: banner  banner.rs  built_in_commands.json  cli.rs  client_server.rs  conversation_selector.rs  editor.rs  info.rs  input.rs  lib.rs  main.rs  model.rs  porcelain.rs  prompt.rs  sandbox.rs  state.rs  sync_display.rs  title_display.rs  tools_display.rs  tracker.rs  ui.rs  ui.rs.rej  update.rs  utils.rs.rej  vscode.rs  zsh_plugin.rs
crates/paws_main/src/completer/: command.rs  input_completer.rs
crates/paws_repo/: Cargo.toml  Cargo.toml.rej  build.rs
crates/paws_repo/proto/: paws.proto
crates/paws_repo/src/: agent.rs  app_config.rs  context_engine.rs  fs_snap.rs  lib.rs  paws_repo.rs  provider.json  provider.json.rej  provider.rs  skill.rs  validation.rs  workspace.rs
crates/paws_repo/src/agents/: muse.md  paws.md  sage.md
crates/paws_repo/src/conversation/: conversation_record.rs  conversation_repo.rs
crates/paws_repo/src/database/: schema.rs
crates/paws_server/: Cargo.toml
crates/paws_server/src/: ipc.rs  main.rs  server.rs
crates/paws_services/: Cargo.toml  Cargo.toml.rej
crates/paws_services/src/: agent_registry.rs  app_config.rs  attachment.rs  attachment_tests.rs  auth.rs  command.rs  context_engine.rs  conversation.rs  discovery.rs  env.rs  http.rs  instructions.rs  lib.rs  log.rs  paws_services.rs  policy.rs  provider_auth.rs  template.rs  workflow.rs
crates/paws_services/src/mcp/: manager.rs  service.rs  (+1 more)
(+177 files in other folders)
