[package]
name = "paws_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
url.workspace = true
async-trait.workspace = true
paws_domain.workspace = true
paws_stream.workspace = true
paws_services.workspace = true
paws_repo.workspace = true
paws_infra.workspace = true
futures.workspace = true








paws_app.workspace = true
serde_json.workspace = true

[dev-dependencies]

tokio = { workspace = true }


