[package]
name = "paws_api"
version = "0.1.0"
edition = "2024"

[dependencies.anyhow]
workspace = true

[dependencies.url]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.paws_domain]
workspace = true

[dependencies.paws_services]
workspace = true

[dependencies.paws_repo]
workspace = true

[dependencies.paws_infra]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.paws_app]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.paws_common]
workspace = true

[dev-dependencies.tokio]
workspace = true
