[package]
name = "paws_app"
version = "0.1.0"
edition = "2024"

[dependencies]
paws_domain.workspace = true
paws_stream.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yml.workspace = true
futures.workspace = true
tracing.workspace = true
async-recursion.workspace = true
chrono.workspace = true
derive_setters.workspace = true
handlebars.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
tokio.workspace = true
regex.workspace = true
thiserror.workspace = true
paws_display.workspace = true
console.workspace = true
derive_more.workspace = true
tempfile.workspace = true
strum.workspace = true
strum_macros.workspace = true
paws_template.workspace = true
merge.workspace = true
convert_case.workspace = true
backon.workspace = true
sha2.workspace = true

url.workspace = true
reqwest.workspace = true
bytes.workspace = true
reqwest-eventsource.workspace = true
schemars.workspace = true
glob.workspace = true
lazy_static.workspace = true

tonic.workspace = true


[dev-dependencies]
paws_test_kit.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
pretty_assertions.workspace = true
insta.workspace = true
tokio-stream.workspace = true
fake = { version = "4.4.0", features = ["derive"] }
paws_domain = { path = "../paws_domain" }
