[package]
name = "paws_app"
version = "0.1.0"
edition = "2024"

[dependencies.paws_domain]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_yml]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.async-recursion]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.derive_setters]
workspace = true

[dependencies.handlebars]
workspace = true

[dependencies.rust-embed]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.console]
workspace = true

[dependencies.derive_more]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.merge]
workspace = true

[dependencies.convert_case]
workspace = true

[dependencies.backon]
workspace = true

[dependencies.sha2]
workspace = true

[dependencies.url]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.reqwest-eventsource]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.glob]
workspace = true

[dependencies.lazy_static]
workspace = true



[dependencies.paws_common]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "time", "test-util",]

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.insta]
workspace = true

[dev-dependencies.tokio-stream]
workspace = true

[dev-dependencies.fake]
version = "4.4.0"
features = [ "derive",]

[dev-dependencies.paws_domain]
path = "../paws_domain"

[dev-dependencies.paws_common]
workspace = true
