[package]
name = "paws_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
insta = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
termimad = { workspace = true }
infer = "0.19.0"

[dependencies.html-escape]
version = "0.2"

[dependencies.syntect]
version = "5.0"

[dependencies.crossterm]
version = "0.28"

[dependencies.rand]
version = "0.8"

[dependencies.indicatif]
version = "0.17"

[dependencies.similar]
version = "2.4"

[dependencies.lazy-regex]
version = "3.1"

[dependencies.derive_setters]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
strip-ansi-escapes = "0.2"

[features]
json = []
