[package]
name = "paws_display"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_setters.workspace = true
similar.workspace = true
console.workspace = true
regex.workspace = true
termimad.workspace = true
syntect = "5.2"
lazy-regex = "3.0"
crossterm = "0.29.0"
wrap-ansi = "0.1"
paws_spinner = { path = "../paws_spinner" }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
strip-ansi-escapes.workspace = true
