[package]
name = "paws_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
paws_snaps.workspace = true
paws_fs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
dotenvy.workspace = true
paws_domain.workspace = true
paws_services.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest.workspace = true

bytes.workspace = true
pretty_assertions.workspace = true
paws_select.workspace = true
tempfile.workspace = true
rmcp.workspace = true
tracing.workspace = true
backon.workspace = true
thiserror.workspace = true
schemars.workspace = true
paws_app.workspace = true
paws_walker.workspace = true


reqwest-eventsource.workspace = true
glob.workspace = true
futures.workspace = true
diesel = { version= "2.2.12", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
diesel_migrations = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
cacache = { version = "13.1.0", features = ["tokio-runtime"], default-features = false }
serde.workspace = true
oauth2 = { version = "5.0", features = ["reqwest"] }
serde_urlencoded = "0.7.1"
http.workspace = true
url.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
serial_test = "3.2"
fake = { version = "4.4.0", features = ["derive"] }
pretty_assertions.workspace = true
paws_domain = { path = "../paws_domain" }
