[package]
name = "paws_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_urlencoded = "0.7.1"

[dependencies.libsqlite3-sys]
version = "0.35.0"
features = ["bundled"]

[dev-dependencies]
serial_test = "3.2"

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.dotenvy]
workspace = true

[dependencies.paws_domain]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.pretty_assertions]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.rmcp]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.backon]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.paws_app]
workspace = true

[dependencies.reqwest-eventsource]
workspace = true

[dependencies.glob]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.cacache]
version = "13.1.0"
features = [ "tokio-runtime",]
default-features = false

[dependencies.serde]
workspace = true

[dependencies.oauth2]
version = "5.0"
features = [ "reqwest",]

[dependencies.http]
workspace = true

[dependencies.url]
workspace = true



[dependencies.paws_common]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "time", "test-util",]

[dev-dependencies.fake]
version = "4.4.0"
features = [ "derive",]

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.paws_domain]
path = "../paws_domain"
