[[bin]]
name = "paws"
path = "src/main.rs"

[package]
name = "paws_main"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2"
paws_services.workspace = true

[dev-dependencies]
serial_test = "3.2"
strip-ansi-escapes = "0.2"

[dependencies.thiserror]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.console]
workspace = true

[dependencies.paws_app]
workspace = true

[dependencies.paws_api]
workspace = true

[dependencies.paws_domain]
workspace = true

[dependencies.merge]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tokio-stream]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.derive_setters]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.reedline]
workspace = true

[dependencies.nu-ansi-term]
workspace = true

[dependencies.nucleo]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.convert_case]
workspace = true

[dependencies.update-informer]
version = "1.2.0"
default-features = false
features = [ "npm", "ureq", "rustls-tls",]

[dependencies.open]
workspace = true

[dependencies.humantime]
workspace = true

[dependencies.num-format]
workspace = true

[dependencies.url]
workspace = true

[dependencies.rust-embed]
version = "8.5"
features = [ "interpolate-folder-path",]

[dependencies.indexmap]
workspace = true

[dependencies.async-recursion]
workspace = true

[dependencies.paws_common]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "time", "test-util",]

[dev-dependencies.insta]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.fake]
version = "4.4.0"
features = [ "derive",]

[dev-dependencies.paws_domain]
path = "../paws_domain"

[target."cfg(not(target_os = \"android\"))".dependencies]
arboard = "3.4"
