[package]
name = "paws_repo"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel_migrations = "2.2.0"
paws_services.workspace = true


[dev-dependencies]
serial_test = "3.2"

[dependencies.paws_app]
workspace = true

[dependencies.paws_domain]
workspace = true

[dependencies.paws_infra]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.url]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.reqwest-eventsource]
workspace = true

[dependencies.handlebars]
workspace = true

[dependencies.merge]
workspace = true

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.diesel]
version = "2.2.12"
features = [ "sqlite", "r2d2", "chrono",]

[dependencies.thiserror]
workspace = true

[dependencies.derive_more]
workspace = true

[dependencies.gray_matter]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.tonic]
workspace = true

[dependencies.paws_common]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = [ "macros", "rt", "time", "test-util",]

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.fake]
version = "4.4.0"
features = [ "derive",]

[dev-dependencies.derive_setters]
workspace = true

[dev-dependencies.paws_common]
workspace = true
